<?xml version="1.0"?>
<package format="2">
  <name>tiago_reach</name>
  <version>0.0.0</version>
  <description>The tiago_reach package</description>

  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tiago_description</exec_depend>
  <exec_depend>reach_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
